--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,12 +3,16 @@
 name: Docker Build
 
 # Controls when the action will run. 
-on:
+#on:
   # Triggers the workflow on push or pull request events but only for the master branch
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+ # push:
+  #  branches: [ master ]
+  #pull_request:
+   # branches: [ master ]
+
+    on:
+      repository_dispatch:
+        types: [ my-event ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
