--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,7 @@ name: Docker Build
 
 on:
   repository_dispatch:
-    types: [ my-event ]
+    types: [ docker-build ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
