--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
-
+debug=false
+# Local Env Variables
+DB_HOST_AND_PORT=mysqldb:3306
+DB_NAME=speedway_trails_db
+DB_USER=root
+DB_PASSWORD=trailspwd
+# Application props
+spring.application.name=speedway-trails
+# Database Props
+spring.datasource.url=jdbc:mysql://${DB_HOST_AND_PORT}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Spring by default only reads embedded sources. Load from all data sources:
+spring.datasource.initialization-mode=always
+# Defined in your local environment
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+# JPA Props
+# Create/drop the schema for each session.
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.continue-on-error=true
