implemented get cars service and it's testcase

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,9 @@
 #Left empty to use in memory H2 database
+# JPA Props
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.generate-ddl=true
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+
+
+spring.jpa.properties.hibernate.format_sql=true
