modified heroku.yml and using H2 for main API too

--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -1,9 +1,8 @@
 name: Deploy to Heroku
 
 on:
-  workflow_dispatch:
-  release:
-    types: [published]
+  repository_dispatch:
+    types: [ heroku-deployment ]
 
 jobs:
   build:
