--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,3 +31,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Run docker build and build the image
         run: docker build . --file Dockerfile --tag speedwaytrails:test
+
+      - name: Repository Dispatch
+          uses: peter-evans/repository-dispatch@v1
+          with:
+            token: ${{ secrets.REPO_ACCESS_TOKEN }}
+            repository: ${{ github.repository }}
+            event-type: heroku-deployment
+            client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
