Added Post gre config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ DB_PASSWORD=trailspwd
 # Application props
 spring.application.name=speedway-trails
 # Database Props
-spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
+#spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Spring by default only reads embedded sources. Load from all data sources:
@@ -22,3 +23,8 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.continue-on-error=true
+# JPA Props
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
