un commented db url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ DB_PASSWORD=trailspwd
 spring.application.name=speedway-trails
 # Database Props
 #spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
-#spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:${DATABASE_URL}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Spring by default only reads embedded sources. Load from all data sources:
