corrected postgres user and password for heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ debug=false
 # Local Env Variables
 DB_HOST_AND_PORT=postgresdb:5432
 DB_NAME=speedway_trails_db
-DB_USER=root
-DB_PASSWORD=trailspwd
+DB_USER=postgres
+DB_PASSWORD=
 # Application props
 spring.application.name=speedway-trails
 # Database Props
