reverted build.gradle, corrected application.properties & added application-local.properties

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,11 +1,13 @@
 debug=false
-
+# Local Env Variables
+DB_HOST_AND_PORT=postgresdb:5432
+DB_NAME=speedway_trails_db
+DB_USER=postgres
+DB_PASSWORD=trailspwd
 # Application props
 spring.application.name=speedway-trails
 # Database Props
-#spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:${DATABASE_URL}
-
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Spring by default only reads embedded sources. Load from all data sources:
@@ -23,5 +25,5 @@ spring.datasource.continue-on-error=true
 # JPA Props
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
+spring.jpa.properties.hibernate.format_sql=true
