added spring profile in docker file & modified application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,9 @@ debug=false
 # Application props
 spring.application.name=speedway-trails
 # Database Props
-#spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:${DATABASE_URL}
-
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource 
 # Spring by default only reads embedded sources. Load from all data sources:
 spring.datasource.initialization-mode=always
 # Defined in your local environment
