removed jdbc:// in db url for heorku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ debug=false
 # Application props
 spring.application.name=speedway-trails
 # Database Props
-spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource 
 # Spring by default only reads embedded sources. Load from all data sources:
