--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compile 'org.apache.tomcat:tomcat-jdbc'
-	runtimeOnly 'org.postgresql:postgresql'
+	compile('org.apache.tomcat:tomcat-jdbc:9.0.29')
+	compile('org.postgresql:postgresql:42.2.8')
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
