--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ debug=false
 # Application props
 spring.application.name=speedway-trails
 # Database Props
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource 
 # Spring by default only reads embedded sources. Load from all data sources:
@@ -13,7 +13,7 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 # JPA Props
 # Create/drop the schema for each session.
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
