--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       DB_USER: postgres
       DB_PASSWORD: trailspwd
       DB_NAME: speedway_trails_db
+      SPRING_PROFILES_ACTIVE: local
     depends_on:
       - postgresdb
     ports:
